[gd_scene format=3 uid="uid://hu21i88j11kw"]

[ext_resource type="Script" uid="uid://dqq82nv725xog" path="res://menu.gd" id="1_1rerr"]
[ext_resource type="PackedScene" uid="uid://coni7taomi02c" path="res://Scenes/menu/menu_background.tscn" id="2_ku2mk"]
[ext_resource type="PackedScene" uid="uid://cjdtsy6n7hf1s" path="res://Scenes/title/title.tscn" id="3_etjwi"]
[ext_resource type="Texture2D" uid="uid://cqick4oa35ns3" path="res://UI/Buttons/boton_normal.png" id="4_7g6em"]
[ext_resource type="PackedScene" uid="uid://dlg0p3fm8doel" path="res://Scenes/opciones/opciones.tscn" id="4_158mb"]
[ext_resource type="FontFile" uid="uid://biev7coe5ekht" path="res://Letter/ARCADECLASSIC.TTF" id="4_puqa6"]
[ext_resource type="Texture2D" uid="uid://c7ui3ap2nl1bf" path="res://UI/Buttons/boton_hover.png" id="5_puqa6"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ku2mk"]
texture = ExtResource("4_7g6em")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_34jek"]
texture = ExtResource("5_puqa6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_puqa6"]
texture = ExtResource("4_7g6em")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0l81c"]
texture = ExtResource("5_puqa6")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_wksr7"]
texture = ExtResource("4_7g6em")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bro2n"]
texture = ExtResource("5_puqa6")

[node name="menu" type="Control" unique_id=115816410]
layout_mode = 3
anchor_right = 1.001
anchor_bottom = 1.0
offset_right = -0.15209961
offset_bottom = -4.0
script = ExtResource("1_1rerr")

[node name="MenuBackground" parent="." unique_id=476532375 instance=ExtResource("2_ku2mk")]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.9990001
anchor_bottom = 1.005
offset_right = 13.152954
offset_bottom = 12.780029

[node name="MainPanel" type="Control" parent="." unique_id=740112396]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" parent="MainPanel" unique_id=313982728 instance=ExtResource("3_etjwi")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -146.49997
offset_top = -242.0
offset_right = -82.50925
offset_bottom = -242.0
scale = Vector2(0.489, 0.55)

[node name="MarginContainer" type="MarginContainer" parent="MainPanel" unique_id=1492856590]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 150.0
offset_right = 6.0
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 400
theme_override_constants/margin_top = 150
theme_override_constants/margin_right = 400

[node name="VBoxContainer" type="VBoxContainer" parent="MainPanel/MarginContainer" unique_id=1816242784]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="PlayButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer" unique_id=1091447994]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.1764706, 1, 0.94509804, 1)
theme_override_fonts/font = ExtResource("4_puqa6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_ku2mk")
theme_override_styles/hover = SubResource("StyleBoxTexture_34jek")
text = "PLAY"

[node name="SettingsButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer" unique_id=503327817]
texture_filter = 1
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.1764706, 1, 0.94509804, 1)
theme_override_fonts/font = ExtResource("4_puqa6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_puqa6")
theme_override_styles/hover = SubResource("StyleBoxTexture_0l81c")
text = "OPTIONS
"

[node name="QuitButton" type="Button" parent="MainPanel/MarginContainer/VBoxContainer" unique_id=1552566290]
texture_filter = 1
clip_contents = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_colors/font_color = Color(0.1764706, 1, 0.94509804, 1)
theme_override_fonts/font = ExtResource("4_puqa6")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxTexture_wksr7")
theme_override_styles/hover = SubResource("StyleBoxTexture_bro2n")
text = "EXIT
"

[node name="OptionsPanel" type="Control" parent="." unique_id=931583844]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Opciones" parent="OptionsPanel" unique_id=1684543358 instance=ExtResource("4_158mb")]
layout_mode = 1

[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainPanel/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
